--- a/frontend/src/Pages/Styles/home.module.css
+++ b/frontend/src/Pages/Styles/home.module.css
@@ -59,6 +59,9 @@
     font-size: 18px;
     padding: 10px;
 }
+.title {
+    font-weight: bold;
+}
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
     .home  {
